Split properties into subcategories
Split properties into subcategories, more work. (Most done over a year
ago but not pushed until today.)